--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "highcharts-vue": "^1.3.5",
     "lodash": "^4.17.15",
     "vue": "^2.6.11",
+    "vue-lodash": "^2.1.2",
     "vue-router": "^3.4.9",
     "vuetify": "^2.2.11"
   },
