--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "highcharts": "^8.2.2",
     "highcharts-vue": "^1.3.5",
     "lodash": "^4.17.15",
+    "lorem-ipsum": "^2.0.3",
     "vue": "^2.6.11",
     "vue-confetti": "^2.2.1",
     "vue-lodash": "^2.1.2",
