--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "core-js": "^3.6.5",
     "highcharts": "^8.2.2",
     "highcharts-vue": "^1.3.5",
     "lodash": "^4.17.15",
     "lorem-ipsum": "^2.0.3",
     "vue": "^2.6.11",
+    "vue-awesome-countdown": "^1.1.2",
     "vue-confetti": "^2.2.1",
     "vue-lodash": "^2.1.2",
     "vue-router": "^3.4.9",
