--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "lodash": "^4.17.15",
     "lorem-ipsum": "^2.0.3",
     "vue": "^2.6.11",
-    "vue-awesome-countdown": "^1.1.2",
+    "vue-awesome-countdown": "^1.1.4",
     "vue-confetti": "^2.2.1",
     "vue-lodash": "^2.1.2",
+    "vue-native-websocket": "^2.0.14",
     "vue-router": "^3.4.9",
-    "vuetify": "^2.2.11"
+    "vuetify": "^2.2.11",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
