--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "core-js": "^3.6.5",
+    "date-fns": "^2.21.3",
     "highcharts": "^8.2.2",
     "highcharts-vue": "^1.3.5",
     "lodash": "^4.17.20",
