--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "vue-native-websocket": "^2.0.14",
     "vue-router": "^3.4.9",
     "vuetify": "^2.2.11",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "webpack-bundle-tracker": "0.4.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
